Fix visible scrollbar on the browser window.

--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@ body {
 html, body, #container {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 #editor {
     position: relative;
     cursor: crosshair;
     overflow: auto;
-    height: 100%;
+    height: calc(100% - 30px);
     margin-top: 30px;
     z-index: 0;
 }
@@ -31,7 +32,6 @@ html, body, #container {
     text-align: center;
     z-index: 1;
     height: 30px;
-/*    overflow: hidden;*/
 }
 
 #title p {
